--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,6 @@ project(miLisp C)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_C_STANDARD 11)
 
-file(GLOB COMMON_SRC src/common/**.c)
-add_library(milisp ${COMMON_SRC})
-target_include_directories(milisp PUBLIC src/common/include/)
 
 set(STEPS
     step0_repl step1_read_print step2_eval step3_env step4_if_fn_do
@@ -15,7 +12,7 @@ set(STEPS
 )
 
 foreach(STEP IN LISTS STEPS)
-    set(TARGET ${STEP})
-    add_executable(${TARGET} src/main_${TARGET}.c)
-    target_link_libraries(${TARGET} milisp)
+    file(GLOB SRCS src/mal/${STEP}/**.c)
+    add_executable(${STEP} src/main.c ${SRCS})
+    target_include_directories(${STEP} PRIVATE include/)
 endforeach()
